2005-12-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure:     Use FTS file APIs on Darwin if available.
	* unix/tcl.m4:        Addresses file delete issues in readdir noted
	* unix/tclUnixFCmd.c: in [Bug 1034337]. (steffen)
	Reduce on stat call in DoCopyFile. (steffen)

2005-12-02  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclClock.c: Moved a tiny bit more of [clock format] from
	* library/clock.tcl: run time to compile time, and fixed a l10n
	bug in the process. [Bug 1371446]. Also, conditoned the call to
	SetupTimeZone to speed the common case where TZData($timezone)
	already exists, and achieved a puny speedup by making 
	::tcl::clock::getenv not throw errors.
	* unix/Makefile.in: Made some changes to support a 'make' command
	that is present on some antiquated versions of Solaris.
	
2005-12-01  Kevin B. Kenny  <kennykb@acm.org>

	* library/clock.tcl: Continued rationalizing the code, eliminating
	numerous redundant [mc] calls.  Added another time boost by
	precompiling a [::format] command to do the bulk of the work
	of [clock format].
	
2005-12-01  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* unix/Makefile.in: Add remaining dependency info. While automated
	maintenance of this information would be good, having it at all is
	much better than a poke in the eye with a sharp stick...

2005-12-01  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclClock.c: fix warning.

	* unix/tcl.m4 (Darwin): fixed error when MACOSX_DEPLOYMENT_TARGET unset
	* unix/configure: regen.

2005-11-30  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* unix/Makefile.in: Add dependency information relating to tclCompile.h
	since when the list of opcodes changes it is usually useful to rebuild
	everything that depends on it (but which is nonetheless a small
	fraction of the total set of Tcl source files).

	***POTENTIAL INCOMPATIBILITY*** for bytecode savers/loaders. See below.

	* generic/tclCompCmds.c (TclCompileSwitchCmd): Arrange for very simple