@@ -28,6 +28,9 @@
 /* Do we have access to Darwin CoreFoundation.framework ? */
 #undef HAVE_COREFOUNDATION
 
+/* Do we have fts functions? */
+#undef HAVE_FTS
+
 /* Define to 1 if you have the `getattrlist' function. */
 #undef HAVE_GETATTRLIST
 
